[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic-ai-gateway"
version = "0.2.0"
description = "Production-grade LLM routing with automatic fallbacks, canary deployments, and multi-provider support"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Tyler Canton" }
]
keywords = [
    "llm",
    "ai",
    "gateway",
    "bedrock",
    "openai",
    "anthropic",
    "fallback",
    "canary",
    "mlops"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = []

[project.optional-dependencies]
bedrock = ["boto3>=1.28.0"]
openai = ["openai>=1.0.0"]
all = ["boto3>=1.28.0", "openai>=1.0.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "moto>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/tyler-canton/agentic-ai-gateway"
Documentation = "https://github.com/tyler-canton/agentic-ai-gateway#readme"
Repository = "https://github.com/tyler-canton/agentic-ai-gateway"
Issues = "https://github.com/tyler-canton/agentic-ai-gateway/issues"

[tool.hatch.build.targets.wheel]
packages = ["agentic_ai_gateway"]
