[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic-ai-gateway"
version = "0.5.0"
description = "Production-grade LLM gateway with conversation memory, streaming, guardrails (PII/injection defense), Redis caching, cost tracking, and multi-provider routing"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Tyler Canton", email = "tylercanton808@gmail.com" }
]
maintainers = [
    { name = "Tyler Canton", email = "tylercanton808@gmail.com" }
]
keywords = [
    "llm",
    "ai",
    "gateway",
    "bedrock",
    "openai",
    "anthropic",
    "claude",
    "gpt",
    "fallback",
    "canary",
    "mlops",
    "llmops",
    "ai-gateway",
    "model-routing",
    "multi-model",
    "resilience",
    "production",
    "streaming",
    "auto-discovery",
    "cross-provider",
    "agent-type",
    "model-family",
    "cost-tracking",
    "semantic-routing",
    "caching",
    "cloudwatch",
    "observability",
    "circuit-breaker",
    "retry-backoff",
    "conversation-memory",
    "guardrails",
    "pii-detection",
    "prompt-injection",
    "content-filter",
    "redis",
    "hipaa",
    "compliance",
    "tyler-canton"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = []

[project.optional-dependencies]
bedrock = ["boto3>=1.28.0"]
openai = ["openai>=1.0.0"]
redis = ["redis>=5.0.0"]
all = ["boto3>=1.28.0", "openai>=1.0.0", "redis>=5.0.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "moto>=4.0.0",
    "redis>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/tyler-canton/agentic-ai-gateway"
Documentation = "https://github.com/tyler-canton/agentic-ai-gateway#readme"
Repository = "https://github.com/tyler-canton/agentic-ai-gateway"
Issues = "https://github.com/tyler-canton/agentic-ai-gateway/issues"
Changelog = "https://github.com/tyler-canton/agentic-ai-gateway/releases"
Author = "https://github.com/tyler-canton"

[tool.hatch.build.targets.wheel]
packages = ["agentic_ai_gateway"]
